--- a/sow-frontend/src/index.css
+++ b/sow-frontend/src/index.css
@@ -4,15 +4,6 @@
   font-family: 'Open Sans', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  background-image: url(./assets/background.webp);
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: top;
-  background-repeat: no-repeat;
-
-  /* color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424; */
 }
 
 a {
@@ -24,9 +15,10 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+html, body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 h1 {
